--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="scene">
     <img class="scene-background " src="styles/gifs/background.png" alt="">
-    <img id="character" class="scene-guns --character" src="" alt="">
+    <img id="character" class="scene --character" src="" alt="">
   </div>
 
   <div class="textbox">
@@ -28,6 +28,7 @@
       </ul>
     </div>
   </div>
+
   <script src="./js/app.js"></script>
   <script src="./index.js"></script>
 
