--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Doki Doki</title>
+  <title>Natsukidesu</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="start">
-    <img class="start-background" src="styles/gifs/backstart.jpg" alt="">
-    <h1 class="start-gameTitle">Doki D%^ù$ù?£</h1>
+    <img class="start-background" src="styles/gifs/background2.png" alt="">
+    <h1 class="start-gameTitle">May Natsuki be your waifu ?</h1>
     <button class="start-btnStart">Commencer</button>
   </div>
   <div class="scene">
@@ -20,12 +20,12 @@
   </div>
 
   <div class="textbox">
-    <h2 id="questions" class="textbox-question"></h2>
+    <h2 id="questions" class="textbox-question">texte</h2>
     <div class="textbox-answerArea">
-      <ul class="textbox-answerContainer">
-        <li id="answer1" class="textbox-answer1"></li>
-        <li id="answer2" class="textbox-answer2"></li>
-      </ul>
+      <div class="textbox-answerContainer">
+        <p id="answer1" class="textbox-answer1">rep 1</p>
+        <p id="answer2" class="textbox-answer2">rep 2</p>
+      </div>
     </div>
   </div>
 
