--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
   </div>
 
   <div class="textbox">
-    <h2 id="questions" class="textbox-question">texte</h2>
+    <h2 id="questions" class="textbox-question">Salut toi ! Comment t’appelles-tu ?</h2>
     <div class="textbox-answerArea">
       <div class="textbox-answerContainer">
-        <p id="answer1" class="textbox-answer1">rep 1</p>
-        <p id="answer2" class="textbox-answer2">rep 2</p>
+        <p id="answer1" class="textbox-answer1">x-300-4001</p>
+        <p id="answer2" class="textbox-answer2">Damien</p>
       </div>
     </div>
   </div>
