--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <button class="start-btnStart">Commencer</button>
   </div>
   <div class="scene">
-    <img class="scene-background " src="styles/gifs/background.png" alt="">
+    <img id="background" class="scene-background" src="styles/gifs/background.png" alt="">
     <img id="character" class="scene --character" src="" alt="">
   </div>
 
@@ -23,8 +23,8 @@
     <h2 id="questions" class="textbox-question">Salut toi ! Comment t’appelles-tu ?</h2>
     <div class="textbox-answerArea">
       <div class="textbox-answerContainer">
-        <p id="answer1" class="textbox-answer1">x-300-4001</p>
-        <p id="answer2" class="textbox-answer2">Damien</p>
+        <li id="answer1" class="textbox-answer1">x-300-4001</li>
+        <li id="answer2" class="textbox-answer2">Damien</li>
       </div>
     </div>
   </div>
