--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
   </div>
 
-  <script src="./js/app.js"></script>
-  <script src="./index.js"></script>
+  <script src="js/app.js"></script>
+  <script src="index.js"></script>
 
 </body>
 
