--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="scene">
     <img id="background" class="scene-background" src="styles/gifs/background.png" alt="">
-    <img id="character" class="scene --character" src="" alt="">
+    <img id="character" class="scene --character" src="styles/gifs/happy.png" alt="">
   </div>
 
   <div class="textbox">
